tests/NormalTests/paczka2/big_fuzzy/46224304.err
Error in line 5: HsvRz0w A923 32,1
Error in line 6: HsvRz0w A532 65,0
Error in line 12: HsvRz0w A923 15,5
Error in line 14: HsvRz0w A532 64,8
Error in line 18: HsvRz0w A923 20,2
Error in line 34: 1Nbh A9e3 51,8
Error in line 44: HsvRz0w A923 92,9
Error in line 49: BgadUSQ A532 8b,2
Error in line 33: 1Nbh A532 39,1
Error in line 56: 1Nbh A923 127,9
Error in line 39: BgadUSQ A923 24,6
Error in line 48: HsvRz0w S75 69,6
Error in line 60: HsvRz0w A432 38,8
Error in line 63: HsvRz0w S75 39,5
Error in line 54: W12QNVihOj S75 3,6
Error in line 61: 1Nbh A532 54,1
Error in line 70: 1Nbh S75 1,1
Error in line 74: ACilU S75 39,8
Error in line 85: ACilU A923 165,18
Error in line 82: FFeqVGUop A432 32,2
Error in line 90: W12QNVihOj A923 73,8
Error in line 58: BgadUSQ A532 1,6
Error in line 105: HsvRz0w S75 24,6
Error in line 106: HsvRz0w A923 2,0
Error in line 121: ACilU A432 59,21
Error in line 103: ACilU A923 19,5
Error in line 134: HsvRz0w S75 65,5
Error in line 139: W12QNVihOj S75 79,51
Error in line 135: S75 A432 28,2
Error in line 141: BgadUSQ S75 2,5
Error in line 143: S75 A923 98,3
Error in line 146: S75 A532 50,3
Error in line 151: S75 S75 35,2
Error in line 154: S75 A923 20,3
Error in line 153: W12QNVihOj S75 276,1
Error in line 168: BgadUSQ A923 64,9
Error in line 178: W12QNVihOj 923 176,3
Error in line 173: W12QNVihOj A923 94,8
Error in line 179: HsvRz0w A432 24,0
Error in line 183: S75 A923 11,5
Error in line 174: FFeqVGUop A432 246,1
Error in line 205: HsvRz0w A532 43,8
Error in line 213: HsvRz0w S75 56,3
Error in line 215: HsvRz0w A532 42,1
Error in line 221: ACilU A923 24,5
Error in line 225: BgadUSQ S75 77,5
Error in line 224: W12QNVihOj S75 148,3
Error in line 230: W12QNVihOj A923 4,7
